# api/internal/router/router.go
@@ -33,6 +33,7 @@ func Register(e *echo.Echo, h *handler.Handlers, jwtManager *jwtpkg.Manager) {
 		{
 			authorized.GET("/user_info/", h.User.Info)
 			authorized.PUT("/user_info/", h.User.Update)
+			authorized.PUT("/user_info/email/", h.User.ChangeEmail)
 			authorized.PUT("/user_info/password/", h.User.ChangePassword)
 			authorized.DELETE("/user_info/", h.User.Delete)
 			authorized.GET("/users/", h.User.List)
